# knot-di

./: .clang-format  .gitignore  CMakeLists.txt  README.md  README_RU.md  \  di  flake.nix  static_allocator.hpp
benchmarks/: BenchmarkMain.cpp  CMakeLists.txt  ContainerBenchmark.cpp  MemoryPoolBenchmark.cpp  benchmark_main.cpp
doc/html/: _container_8hpp.html  _container_8hpp.js  _container_8hpp_source.html  _container_macros_8hpp.html  _container_macros_8hpp.js  _container_macros_8hpp_source.html  _container_tests_8cpp.html  _container_tests_8cpp.js  _descriptor_8hpp.html  _descriptor_8hpp.js  _descriptor_8hpp_source.html  _factory_8hpp.html  _factory_8hpp.js  _factory_8hpp_source.html  _memory_pool_8hpp.html  _memory_pool_8hpp.js  _memory_pool_8hpp_source.html  _memory_pool_tests_8cpp.html  _memory_pool_tests_8cpp.js  _strategy_8hpp.html  _strategy_8hpp.js  _strategy_8hpp_source.html  _util_8hpp.html  _util_8hpp.js  _util_8hpp_source.html  annotated.html  annotated_dup.js  benchmarks.html  class_knot_1_1_container-members.html  class_knot_1_1_container.html  class_knot_1_1_container.js  class_knot_1_1_factory-members.html  class_knot_1_1_factory.html  class_knot_1_1_factory.js  class_knot_1_1_i_factory-members.html  class_knot_1_1_i_factory.html  class_knot_1_1_i_factory.js  class_knot_1_1_memory_pool-members.html  class_knot_1_1_memory_pool.html  class_knot_1_1_memory_pool.js  (+52 more)
doc/html/search/: all_0.js  all_10.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  all_c.js  all_d.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  defines_1.js  defines_2.js  defines_3.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  files_0.js  files_1.js  files_2.js  files_4.js  files_5.js  functions_0.js  functions_1.js  functions_2.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  namespaces_0.js  (+9 more)
doc/latex/: _container_8hpp.tex  _container_8hpp_source.tex  _container_macros_8hpp.tex  _container_macros_8hpp_source.tex  _container_tests_8cpp.tex  _descriptor_8hpp.tex  _descriptor_8hpp_source.tex  _factory_8hpp.tex  _factory_8hpp_source.tex  _memory_pool_8hpp.tex  _memory_pool_8hpp_source.tex  _memory_pool_tests_8cpp.tex  _strategy_8hpp.tex  _strategy_8hpp_source.tex  _util_8hpp.tex  _util_8hpp_source.tex  annotated.tex  benchmarks.tex  class_knot_1_1_container.tex  class_knot_1_1_factory.eps  class_knot_1_1_factory.tex  class_knot_1_1_i_factory.eps  class_knot_1_1_i_factory.tex  class_knot_1_1_memory_pool.tex  dir_59425e443f801f1f2fd8bbe4959a3ccf.tex  dir_d44c64559bbebec7f509842c48db8b23.tex  files.tex  hierarchy.tex  namespace_knot.tex  namespaces.tex  refman.tex  struct_i_service.eps  struct_i_service.tex  struct_knot_1_1_descriptor.tex  struct_knot_1_1_registry_entry.tex  struct_knot_1_1_transient_info.tex  struct_service_impl.eps  struct_service_impl.tex  struct_service_impl_with_arg.eps  struct_service_impl_with_arg.tex  (+5 more)
include/: AbstractFactory.hpp  Container.hpp  ContainerMacros.hpp  Descriptor.hpp  Factory.hpp  IFactory.hpp  MemoryPool.hpp  Strategy.hpp  TypeComparator.hpp  Util.hpp  dumbShit.txt  staticMap.hpp
include/cdi/: Container.hpp  ContainerMacros.hpp  Factory.hpp  Util.hpp
include/knot-di/: Container.hpp  ContainerMacros.hpp  Descriptor.hpp  Factory.hpp  MemoryPool.hpp  Strategy.hpp  Util.hpp
tests/: CMakeLists.txt  ContainerTests.cpp  MemoryPoolTests.cpp  test_main.cpp
